initial theme files + functions, eslint config updates, SCSS variables

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,5 +1,5 @@
 {
-  "extends": ["airbnb", "prettier"],
+  "extends": ["airbnb", "prettier", "plugin:@wordpress/esilnt-plugin/recommended"],
   "plugins": ["prettier"],
   "env": {
     "browser": "true"
