--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/kjhank/bk2020#readme",
   "devDependencies": {
     "@babel/core": "^7.7.5",
+    "@wordpress/eslint-plugin": "^3.2.0",
     "babel-core": "^6.26.3",
     "babel-loader": "^8.0.6",
     "babel-preset-env": "^1.7.0",
